--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -47,4 +47,6 @@
   </div>
 <% end %>
 
-<%= render "public/shared/links" %>
+
+<h2>既に登録済みの方</h2>
+<p><%= render "public/shared/links" %>からログインしてください。</p>
