--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -7,29 +7,29 @@
     <tbody>
       <tr>
         <td>名前</td>
-        <td>(姓)<%= f.text_field :last_name %> </td>
-        <td>(名)<%= f.text_field :first_name %></td>
+        <td>(姓)<%= f.text_field :last_name,:placeholder => "令和" %> </td>
+        <td>(名)<%= f.text_field :first_name,:placeholder => "道子" %></td>
       </tr>
       <tr>
         <td>フリガナ</td>
-        <td>(セイ)<%= f.text_field :last_name_kana %> </td>
-        <td>(メイ)<%= f.text_field :first_name_kana %></td>
+        <td>(セイ)<%= f.text_field :last_name_kana,:placeholder => "レイワ" %> </td>
+        <td>(メイ)<%= f.text_field :first_name_kana,:placeholder => "ミチコ" %></td>
       </tr>
       <tr>
         <td>メールアドレス</td>
-        <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+        <td><%= f.email_field :email, autofocus: true, autocomplete: "email",:placeholder => "sample@example.com" %></td>
       </tr>
       <tr>
         <td>郵便番号（ハイフンなし）</td>
-        <td><%= f.text_field :postal_code %></td>
+        <td><%= f.text_field :postal_code,:placeholder => "0000000" %></td>
       </tr>
       <tr>
         <td>住所</td>
-        <td><%= f.text_area :address %></td>
+        <td><%= f.text_area :address,:placeholder => "東京都渋谷区代々木神園町0-0" %></td>
       </tr>
       <tr>
         <td>電話番号（ハイフンなし）</td>
-        <td><%= f.text_field :telephone_number %></td>
+        <td><%= f.text_field :telephone_number,:placeholder => "00000000000" %></td>
       </tr>
       <tr>
         <td>パスワード(<%= @minimum_password_length %>文字以上)</td>
