--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,7 +1,7 @@
 <h1>マイページ</h1>
 
 <p>登録情報</p>
-<p><%= link_to "編集する","/customers/information/edit", class:"btn btn-sm btn-success" %></p>
+<p><%= link_to "編集する",information_edit_path, class:"btn btn-sm btn-success" %></p>
 
 <table border="1">
   <tr>
