注文テーブル作成

--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,8 +2,8 @@
 
 
 
-<h1><%= @item.name %></h1>
-<p><%= @item.introduction %></p>
+<h1><%#= @item.name %></h1>
+<p><%#= @item.introduction %></p>
 
 
-<p><%= f.submit "カートに入れる" %></p>
+<p><%#= f.submit "カートに入れる" %></p>
