--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,8 +1,8 @@
 <h2>商品一覧</h2>
 
 
-<%# @items.each do |item| %>
-  <%= link_to item_path(item.id) do %>
-  <%= item.name %>
+<%#= @items.each do |item| %>
+  <%#= link_to item_path(item.id) do %>
+  <%#= item.name %>
   <% end %>
 <% end %>
