--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,3 +1,4 @@
+
 <%# if @admin.errors.any? %>
   <%#= @admin.errors.count #コメントアウト→errors prohibited this obj from being saved:%>
   <ul>
@@ -24,6 +25,9 @@
      <tr>
       <th>氏名</th>
       <th><%#= current_user.name %></th>
+      <td><%= link_to admin_customer_path(@admin_customers.id) do %>
+          <% end %>
+      </td>
      </tr>
      <tr>
       <th>メールアドレス</th>
