--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,120 +1,85 @@
 
- <div class="container px-5 px-sm-0">
-  <div class="row">
-   <div class="col-md-3">
-    対象ユーザーさんの会員詳細の書き方質問
+<%#課題事項：会員詳細の背景色変更、履歴一覧のパス変更
+   行間、会員ステータス（有効or無効）、ボタンの色変更%>
 
-     <table class="table">
-      <tbody>
-       <tr></tr>
-       <tr>
-        <th>会員ID</th>
-        <th>
-        <%= @admin_customers.name %>
-        </th>
-       </tr>
+<%#会員No.1 大阪太郎さんのデータが映ることを確認済み%>
+<p><%= @admin_customer.last_name + @admin_customer.first_name %>さんの会員詳細</p>
 
-       <tr>
-        <th>フリガナ</th>
-        <th>
-        <%= @admin_customers.last_name_kana, first_name_kana %>
-        </th>
-       </tr>
-       
-        <tr>
-        <th>郵便番号</th>
-        <th>
-        <%= @admin_customers.postal_code %>
-        </th>
-       </tr>
-       
-        <tr>
-        <th>住所</th>
-        <th>
-        <%= @admin_customers.address %>
-        </th>
-       </tr>
-       
-        <tr>
-        <th>電話番号</th>
-        <th>
-        <%= @admin_customers.telephone_number %>
-        </th>
-       </tr>
-       
-        <tr>
-        <th>メールアドレス</th>
-        <th>
-        <%= @admin_customers.email %>
-        </th>
-       </tr>
-       
-        <tr>
-        <th>会員ステータス</th>
-        <th>
-        <%= @admin_customers.status %>
-        </th>
-       </tr>
-      <tbody>
-     </table>
-     　
-     　<%#編集画面への遷移を確認済み 1219 17:00 %>
-       <div class="form-group">
-       <%= link_to '編集する', edit_admin_customer_path, class: "btn btn-success" %>
-       
-       <%#注文履歴一覧のpathはせいちゃん作成後、再度設定。%>
-       <div class="form-group">
-       <%= link_to '注文履歴一覧を見る', public_order_path, class: "btn btn-success" %>
-       
-       
+ <table class="table">
+  <tbody>
+   <tr></tr>
+    <tr>
+     <th>会員ID</th>
+     <th>
+     <%= @admin_customer.id %>
+     </th>
+    </tr>
+
+   <%#対象ユーザーの氏名を記載 %>
+    <tr>
+     <th>氏名</th>
+     <th>
+     <%= @admin_customer.last_name + @admin_customer.first_name %>
+     </th>
+    </tr>
+
+   <%#対象ユーザーのフリガナを記載 %>
+    <tr>
+     <th>フリガナ</th>
+     <th>
+     <%= @admin_customer.last_name_kana + @admin_customer.first_name_kana %>
+     </th>
+    </tr>
+
+    <%#対象ユーザーの郵便番号を記載 %>
+    <tr>
+     <th>郵便番号</th>
+     <th>
+     <%= @admin_customer.postal_code %>
+     </th>
+    </tr>
+
+　　<%#対象ユーザーの住所を記載 %>
+    <tr>
+     <th>住所</th>
+     <th>
+     <%= @admin_customer.address %>
+     </th>
+    </tr>
+
+　　<%#対象ユーザーの電話番号を記載 %>
+    <tr>
+     <th>電話番号</th>
+     <th>
+     <%= @admin_customer.telephone_number %>
+     </th>
+    </tr>
+
+　　<%#対象ユーザーのメールアドレスを記載 %>
+    <tr>
+     <th>メールアドレス</th>
+     <th>
+     <%= @admin_customer.email %>
+     </th>
+    </tr>
+
+　　<%#対象ユーザーの会員ステータスを記載 %>
+    <tr>
+     <th>会員ステータス</th>
+     <th>
+     <%= @admin_customer.is_deleted %>
+
+     </th>
+    </tr>
+   </tbody>
+</table>
+
+     <%#編集画面への遷移を確認済み 1219 17:00 %>
+     <div class="form-group">
+      <%= link_to '編集する', edit_admin_customer_path, class: "btn btn-success" %>
+
+     <%#注文履歴一覧のpathはせいちゃん作成後、再度設定。%>
+      <%= link_to '注文履歴一覧を見る', public_items_path, class: "btn btn-success" %>
 
 
 
-     <h2 class="mt-3">New book</h2>
-     <form action="/books" accept-charset="UTF-8" method="post">
-     <%= form_with model: @book do |f| %>
-      <div class="form-group">
-       <label for="book_title">Title</label>
-       <div><%= f.text_field :title %></div>
-      </div>
-
-      <div class="form-group">
-       <label for="book_opinion">Opinion</label>
-       <div><%= f.text_area :body %></div>
-      </div>
-
-      <div class="form-group">
-       <%= f.submit 'Create Book', class: "btn btn-success" %>
-       <% end %>
-       </form>
-      </div>
-     </div>
-
-     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-      <table class="table table-hover table-inverse">
-      <thead>
-       <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-       </tr>
-      </thead>
-
-      <tbody>
-       <% @books.each do |book| %>
-       <tr>
-        <td><%= link_to user_path(book.user.id) do %>
-        <%= image_tag book.user.get_profile_image(80,80) %>
-        <% end %>
-        </td>
-        <td><%= link_to book.title, book_path(book.id) %></td>
-        <td><%= book.body %></td>
-       </tr>
-        <% end %>
-      </tbody>
-     </table>
-    </div>
-   </div>
-  </div>
