--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,23 @@
 <div class="container">
   <header>
-    <%= link_to "ロゴ", root_path, class: "navbar-brand" %>
+    <%= link_to image_tag("nagano.png"), top_path, data: {"turbolinks" => false} %>
      
      
     <!--＜顧客がサインインした場合＞-->
     <% if customer_signed_in? %>
-    <span>ようこそ！<%= current_customer.name%>さん</span>
+    <span>ようこそ！<%= current_customer.last_name + current_customer.first_name %>さん</span>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "マイページ", customers_mypage_path, class: "nav-link" %>
+          <%= link_to "マイページ", mypage_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "商品一覧", items_path, class: "nav-link" %>
+          <%#= link_to "商品一覧", items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "カート", cart_items_path, class: "nav-link" %>
+          <%#= link_to "カート", cart_items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "ログアウト", customers_sign_out, method: :delete, class: "nav-link" %>
+          <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
         </li>
       </ul>
       
