--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
+
   <body>
+    <%= render "layouts/header" %>
     <%= yield %>
     <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
   </body>
