--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,50 +1,50 @@
 <h1>会員情報編集</h1>
 
-<%= form_with model: @customer, url: information_edit_path(@customer), method: :patch do |f| %>
-
+<%= form_with model: @customer, url: customers_information_path, method: :PATCH do |f| %>
 <table>
   <tr>
     <th>
-        氏名
-        <%#= f.text_field :customer.last_name %>-->
-        <%#= f.text_field :customer.first_name %>
+        <%= f.label :"氏名" %>
+        <%= f.text_field :last_name %>
+        <%= f.text_field :first_name %>
     </th>
   </tr>
   <tr>
     <td>
-        フリガナ
-        <%#= f.text_field :customer.last_name_kana%>
-        <%#= f.text_field :customer.first_name_kana%>
+        <%= f.label :"フリガナ" %>
+        <%= f.text_field :last_name_kana %>
+        <%= f.text_field :first_name_kana %>
     </t>
   </tr>
   <tr>
     <td>
-        郵便番号
-        <%#= f.text_field :customer.postal_code%>
+        <%= f.label :"郵便番号" %>
+        <%= f.text_field :postal_code %>
     </td>
-   
+
   </tr>
   <tr>
     <td>
-        住所
-        <%#= f.text_field :customer.address_code %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-        電話番号
-        <%#= f.text_field :customer.telephone_number%>
+        <%= f.label :"住所" %>
+        <%= f.text_field :address %>
     </td>
   </tr>
   <tr>
     <td>
-        メールアドレス
-        <%#= f.text_field :customer.postal_code%>
+        <%= f.label :"電話番号" %>
+        <%= f.text_field :telephone_number %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+        <%= f.label :"メールアドレス" %>
+        <%= f.text_field :postal_code %>
     </td>
   </tr>
 </table>
+
+<p>
+  <%= f.submit :"編集内容を保存" %>
+  <%= link_to "退会する", unsubscribe_path(@customer), class:"btn btn-sm btn-success" %>
+</p>
 <% end %>
-
-<p><%= link_to "編集内容を保存",mypage_path(@customer), class:"btn btn-sm btn-success" %></p>
-
-<p><%= link_to "退会する", unsubscribe_path(@customer), class:"btn btn-sm btn-success" %></p>
