--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -8,5 +8,5 @@
 
 <p>
   <%= link_to "退会する", withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }  %>
-  <%= link_to "退会しない", mypage_path(current_user), class:"btn btn-sm btn-success" %>
+  <%= link_to "退会しない", mypage_path(current_customer), class:"btn btn-sm btn-success" %>
 </p>
