--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <header>
-    <%= link_to image_tag("nagano.png"), top_path, data: {"turbolinks" => false} %>
+    <%= link_to image_tag("cake.png"), top_path, data: {"turbolinks" => false} %>
      
      
     <!--＜顧客がサインインした場合＞-->
