--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,1 +1,24 @@
 <h1>Items#indexページです</h1>
+
+  <table>
+    <thread>
+      <tr>
+        <th>商品ID</th>
+        <th>商品名</th>
+        <th>税抜価格</th>
+        <th>ジャンル</th>
+        <th>ステータス</th>
+      </tr>
+    </thread>
+    <tbody>
+      <% @items.each do |item| %>
+        <tr>
+          <th><%= item.id %></th>
+          <th><%= item.name %></th>
+          <th><%= item.price %></th>
+          <th><%= item.genre.name %></th>
+          <th><%= item.is_active %></th>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
