--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,1 +1,6 @@
 <h2>注文情報</h2>
+<%= form_with model: @order, url: confirm_public_orders_path, method: :post, local: true do |f| %>
+ <h3>支払い方法</h3>
+  <p>
+    
+  </p>
