--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,16 +47,16 @@
       <% else %>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "About", about_pass, class: "nav-link" %>
+          <%= link_to "About", about_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "商品一覧", items_path, class: "nav-link" %>
+          <%#= link_to "商品一覧", items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "新規登録", customers_sign_up_path, class: "nav-link" %>
+          <%#= link_to "新規登録", customers_sign_up_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "ログイン", customers_sign_up_path, class: "nav-link" %>
+          <%#= link_to "ログイン", customers_sign_up_path, class: "nav-link" %>
         </li>
       </ul>
     <% end %>
