--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -17,7 +17,13 @@
           <th><%= item.name %></th>
           <th><%= item.price %></th>
           <th><%= item.genre.name %></th>
-          <th><%= item.is_active %></th>
+          <th>
+            <% if item.is_active == true %>
+              販売中
+            <% else %>
+              販売停止中
+            <% end %>
+          </th>
         </tr>
       <% end %>
     </tbody>
