退会機能作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <header>
-    <%= link_to image_tag("naganocake.jpg"), top_path, data: {"turbolinks" => false} %>
+    <%= link_to image_tag("naganocake.jpg"), root_path, data: {"turbolinks" => false} %>
 
 
     <!--＜顧客がサインインした場合＞-->
