admin/itemsの基本的な実装が完了。商品一覧ページ・商品新規登録ページ・商品詳細ページ・商品編集ページを作成。

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,4 +1,11 @@
-<h1>Items#newページです</h1>
+<% if @item.errors.any? %>
+  <%= @item.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @item.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <h1>商品新規画像</h1>
 <%= form_with model: @item,url: admin_items_path do |f| %>
