--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Items#indexページです</h1>
+<%= flash[:notice] %>
 
   <table>
     <thread>
@@ -14,7 +14,11 @@
       <% @items.each do |item| %>
         <tr>
           <th><%= item.id %></th>
-          <th><%= item.name %></th>
+          <th>
+            <%= link_to admin_item_path(item.id) do %>
+              <%= item.name %>
+            <% end %>
+          </th>
           <th><%= item.price %></th>
           <th><%= item.genre.name %></th>
           <th>
@@ -28,3 +32,8 @@
       <% end %>
     </tbody>
   </table>
+  <%= paginate @items %>
+
+    <span>
+      <%= link_to "新規登録", new_admin_item_path %>
+    </span>
