--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,6 +1,6 @@
 
 <%#課題事項：会員詳細の背景色変更、履歴一覧のパス変更
-   行間、会員ステータス（有効or無効）、ボタンの色変更%>
+   行間、ボタンの色変更%>
 
 <%#会員No.1 大阪太郎さんのデータが映ることを確認済み%>
 <p><%= @admin_customer.last_name + @admin_customer.first_name %>さんの会員詳細</p>
