--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,4 +1,5 @@
 
+<%#課題事項：ステータスの有効or無効にボタンの色をつける %>
 <p><%= @admin_customer.last_name + @admin_customer.first_name %>さんの会員情報編集</p>
 
 <%= form_with model: @admin_customer, url: admin_customer_path, method: :patch do |f| %>
