--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -48,8 +48,9 @@
           <td><%= address.address %></td>
           <td><%= address.name %></td>
           <td>
-            <%= link_to "編集する", edit_address_path %>
+            <%= link_to "編集する", edit_address_path(address.id) %>
             <!--削除ボタン-->
+            <%= link_to "削除する", address_path(address.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
           </td>
         </tr>
       <% end %>
