--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,13 +31,13 @@
           <%= link_to "会員一覧", admin_customers_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "注文履歴一覧", admin_orders__path, class: "nav-link"%>
+          <%= link_to "注文履歴一覧", class: "nav-link"%>
         </li>
         <li class="nav-item">
         <%= link_to "ジャンル一覧", admin_genres_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to "ログアウト", admin_sign_out_path, method: :delete, class: "nav-link" %>
+          <%= link_to "ログアウト", destroy_admin_session, method: :delete, class: "nav-link" %>
         </li>
       </ul>
 
@@ -49,13 +49,13 @@
           <%= link_to "About", about_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%#= link_to "商品一覧", items_path, class: "nav-link" %>
+          <%= link_to "商品一覧", public_items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%#= link_to "新規登録", customers_sign_up_path, class: "nav-link" %>
+          <%= link_to "新規登録", new_customer_registration_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%#= link_to "ログイン", customers_sign_up_path, class: "nav-link" %>
+          <%= link_to "ログイン", customer_session_path, class: "nav-link" %>
         </li>
       </ul>
     <% end %>
