--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
         <%= link_to "ジャンル一覧", admin_genres_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <%= link_to "ログアウト", destroy_admin_session, method: :delete, class: "nav-link" %>
+          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link" %>
         </li>
       </ul>
 
