--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -33,6 +33,7 @@
 
 <th>合計金額</th>
 <%# 単価（税込）合計金額の記載 %>
+<h4><%= "合計:#{@prices}円" %></h4>
 
 <%# ショッピングカート真ん中部分の表示機能 %>
 <%= link_to '買い物を続ける', root_path, class: "btn btn-success" %>
