--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -35,8 +35,8 @@
 
 
 <p>配送先</p>
-<p><%= link_to "一覧を見る","/addresses", class:"btn btn-sm btn-success" %></p>
+<p><%= link_to "一覧を見る", addresses_path, class:"btn btn-sm btn-success" %></p>
 
 
 <p>注文履歴</p>
-<p><%= link_to "一覧をみる", "/orders", class:"btn btn-sm btn-success" %></p>
+<p><%= link_to "一覧をみる", public_orders_path, class:"btn btn-sm btn-success" %></p>
