--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -7,18 +7,18 @@
    <th>小計</th>
    <tr>
     <% total = 0 %>
-     <% @cart_items.each do |cart_item| %> 
+     <% @cart_items.each do |cart_item| %>
       <tr>
         <td>
            <%= attachment_image_tag(cart_item.item, :image, size: "70x50", fallback: "noimage.png") %>
            <%= cart_item.item.name %>
         </td>
-        <td><%= (cart_item.item.price*1.08).to_i %></td>
+        <td><%= (cart_item.item.price*1.1).to_i %></td>
         <td><%= cart_item.amount %></td>
-        <td><% subtotal = ((cart_item.item.price*cart_item.amount)*1.08).to_i %></td>
+        <td><% subtotal = ((cart_item.item.price*cart_item.amount)*1.1).to_i %></td>
         <td><%= subtotal %></td>
       </tr>
-      <% total += (cart_item.item.price*cart_item.amount)*1.08 %>
+      <% total += (cart_item.item.price*cart_item.amount)*1.1 %>
      <% end %>
    </tr>
 </table>
@@ -26,11 +26,43 @@
 <table>
    <tr>
      <th>送料</th>
-     <% @order.postage = 800 %>
-     <td><%= @order.postage %></td>
+     <% @order.shipping_cost = 800 %>
+     <td><%= @order.shipping_cost %></td>
    </tr>
    <tr>
      <th>商品合計</th>
-     <td><%= total.to_i </td>
+     <td><%= total.to_i %></td>
+   </tr>
+   <tr>
+     <th>請求金額</th>
+     <% @order.total_payment = @order.shipping_cost + total.to_i %>
+     <td><%= @order.total_payment %></td>
    </tr>
 </table>
+
+<table>
+  <tr>
+    <th>支払い方法</th>
+    <td><%= @order.payment_method_i18n %></td>
+  </tr>
+  <tr>
+    <th>お届け先</th>
+    <tb>
+      <%= @order.postal_code %>
+      <%= @order.address %><br>
+      <%= @order.name %>
+    </tb>
+  </tr>
+</table>
+
+<%= form_with model: @order, url: public_orders_path, method: :post, local: true do |f| %>
+   <%= f.hidden_field :customer_id %>
+   <%= f.hidden_field :shipping_cost %>
+   <%= f.hidden_field :total_payment %>
+   <%= f.hidden_field :payment_method %>
+   <%= f.hidden_field :name %>
+   <%= f.hidden_field :address %>
+   <%= f.hidden_field :postal_code %>
+   <%= f.hidden_field :status %>
+  <%= f.submit "注文を確定する", class: "btn btn-success" %>
+ <% end %>
