--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -2,33 +2,37 @@
 <%# ショッピングカートの一覧画面作成 %>
 <%# 課題事項：タイトルの背景色変更,
 　　買い物を続けるボタンのパス変更, パスの確認, %>
-<h3>ショッピングカート</h3>
+<h6>ショッピングカート</h6>
 
 <%# ショッピングカートの右側の表示機能 %>
-<%= link_to 'カートを空にする', public_cart_items_path, class: "btn btn-success" %>
+<%= link_to 'カートを空にする', public_cart_items_path, class: "btn btn-danger" %>
 
  <main>
   <table class="table">
-   <%# 商品名,単価,数量,小計の繰り返し処理 %>
+   <thead>
    <th>商品名</th>
-   <td><% @cart_items.each do |cart_item| %></td>
+   <th>単価（税込）</th>
+   <th>数量</th>
+   <th>小計</th>
+   </thead>
 
-    <th>単価（税込）</th>
-    <td><% @prices.each do |price| %></td>
+<tbody>
+   <% @cart_items.each do |cart_item| %>
+   <td><%= cart_item.item.name %></td>
+   <td><%= cart_item.item.with_tax_price %></td>
+   <%= form_with model:[cart_item], url: public_cart_item_path(cart_item) do |f| %>
+   <td>
+   <%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"} %>
+   <%= f.submit "変更", class: "btn btn-success" %>
+   </td>
+   <% end %>
+   <td><%= cart_item.item.with_tax_price %></td>
 
-    <th>数量</th>
-    <td><% @amounts.each do |amount| %></td>
-    <%= link_to '変更', public_cart_items_path, class: "btn btn-success" %>
 
-    <th>小計</th>
-    <td><% @prices.each do |price| %></td>
-    <th><%= link_to '削除する', public_cart_items_path, class: "btn btn-success" %></th>
-　 <tbody>
+    <th><%= link_to '削除する', public_cart_items_path, class: "btn btn-danger" %></th>
     <% end %>
-    <% end %>
-    <% end %>
-    <% end %>
-   </tbody>
+</tbody>
+
   </table>
 
 <th>合計金額</th>
@@ -36,7 +40,7 @@
 <h4><%= "合計:#{@prices}円" %></h4>
 
 <%# ショッピングカート真ん中部分の表示機能 %>
-<%= link_to '買い物を続ける', root_path, class: "btn btn-success" %>
+<%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
 <%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
 <%= link_to '情報入力に進む', root_path, class: "btn btn-success" %>
