--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,7 +5,8 @@
 <h6>ショッピングカート</h6>
 
 <%# ショッピングカートの右側の表示機能 %>
-<%= link_to 'カートを空にする', public_cart_items_path, class: "btn btn-danger" %>
+<%= link_to 'カートを空にする', public_destroy_all_path, method: :delete, class: "btn btn-danger" %>
+
 
  <main>
   <table class="table">
@@ -20,24 +21,24 @@
    <% @cart_items.each do |cart_item| %>
    <td><%= cart_item.item.name %></td>
    <td><%= cart_item.item.with_tax_price %></td>
-   <%= form_with model:[cart_item], url: public_cart_item_path(cart_item) do |f| %>
+   <div><%= form_with model:[cart_item], url: public_cart_item_path(cart_item) do |f| %></div>
    <td>
-   <%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"} %>
+   <%= f.select :amount, [['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5], ['6', 6], ['7', 7], ['8', 8], ['9', 9]], {:prompt => "個数選択"} %>
    <%= f.submit "変更", class: "btn btn-success" %>
    </td>
    <% end %>
    <td><%= cart_item.item.with_tax_price %></td>
 
 
-    <th><%= link_to '削除する', public_cart_items_path, class: "btn btn-danger" %></th>
+    <th><%= link_to '削除する', "/public/cart_items/#{cart_item.id}", method: :delete, class: "btn btn-danger" %></th>
     <% end %>
 </tbody>
 
   </table>
 
-<th>合計金額</th>
+
 <%# 単価（税込）合計金額の記載 %>
-<h4><%= "合計:#{@prices}円" %></h4>
+<h4><%= "合計金額:#{@prices*1.1}円" %></h4>
 
 <%# ショッピングカート真ん中部分の表示機能 %>
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
