--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
   </head>
 
 
-
+<!--ヘッダー呼び出し-->
   <body>
     <%= render "layouts/header" %>
     <%= yield %>
   </body>
+  
+<!--フッター呼び出し-->
+  <%= render "layouts/footer" %>
 </html>
