--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>会員情報編集</h1>
+<div class="container">
+  <h1>会員情報編集</h1>
+  
 
 <%= form_with model: @customer, url: customers_information_path, method: :PATCH do |f| %>
 <table>
@@ -48,3 +50,5 @@
   <%= link_to "退会する", unsubscribe_path(@customer), class:"btn btn-sm btn-success" %>
 </p>
 <% end %>
+
+</div>
