--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>マイページ</h1>
 
 <p>登録情報</p>
@@ -40,3 +42,5 @@
 
 <p>注文履歴</p>
 <p><%= link_to "一覧をみる", public_orders_path, class:"btn btn-sm btn-success" %></p>
+
+</div>
