--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,25 +1,23 @@
-<!--ジャンル検索-->
-<strong>ジャンル検索</strong>
-
-<tbody>
-    <% @genres.each do |genre| %>
-    <tr>
-      <td>
-        <%= link_to genre.name, public_items_path(genre_id: genre.id), class: "text-secondary" %>
-      </td>
-    </tr>
-    <% end %>
-</tbody>
-
+<div class="container">
+  <div class="row">
+    <div class="col-xs-2">
+      <!--ジャンル検索-->
+      <%= render 'genrevar', genres: @genres %>
+    </div>
+  <div class="col-xs-10">
 
 
 <!--一覧部分-->
-<p>
-  商品一覧(全<%= @items.count %>件)
-</p> <br>
-<% @items.each do |item| %>
-  <p><%= image_tag item.image, size:"200x200" %></p>
-  <p><%= link_to item.name, public_item_path(item)%></p>
-  <p><%= item.price %>円</p>
-<% end %>
+  <p>
+    商品一覧(全<%= @items.count %>件)
+  </p> 
+  <% @items.each do |item| %>
+  <div class="col-xs-3 text-center ">
+    <p><%= image_tag item.image, size:"200x200" %></p>
+    <p><%= link_to item.name, public_item_path(item)%></p>
+    <p><%= item.price %>円</p>
+  </div>  
+  <% end %>
 
+<%= paginate @item %>
+</div>
