--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,30 +1,28 @@
-<!--ジャンル検索-->
-<strong>ジャンル検索</strong>
-
-<tbody>
-    <% @genres.each do |genre| %>
-    <tr>
-      <td>
-        <%= link_to genre.name, public_items_path(genre_id: genre.id), class: "text-secondary" %>
-      </td>
-    </tr>
-    <% end %>
-</tbody>
-
-
-
-<!--商品詳細-->
-<p><%= image_tag @item.image, size:"200x200" %></p>
-
-<h3><%= @item.name %></h3>
-<p><%= @item.introduction %></p>
-¥ <%= ((@item.price*1.1).floor).to_s(:delimited, delimiter: ',') %> (税込)
-
-
-<!--個数選択-->
-<%= form_with model: @cart_item, url: public_cart_items_path do |f| %>
-  <%= f.hidden_field :item_id, :value => @item.id %>
-  <%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"} %>
-  <%= f.submit "カートに入れる" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-2">
+　　　<!--ジャンル検索-->
+      <%= render 'genrevar', genres: @genres %>
+    </div>
+    <div class="col-xs-10">
+      <div class="col-xs-4 ">
+        <%= image_tag @item.image, size:"200x200" %></p><br>
+      </div>
+      <div class="col-xs-8 ">
+        <div>
+          <%= @item.name %>
+          <%= @item.introduction %>
+          ¥ <%= ((@item.price*1.1).floor).to_s(:delimited, delimiter: ',') %> (税込)
+          
+          <!--個数選択-->
+          <%= form_with model: @cart_item, url: public_cart_items_path do |f| %>
+          <%= f.hidden_field :item_id, :value => @item.id %>
+          <%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"} %>
+          <%= f.submit "カートに入れる" %>
+          <% end %>
+        </div>
+      </div>  
+    </div>
+  </div>
+</div>
 
