--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <nav class="navbar navbar-light mb-2" style="background-color:#FFFFCC;">
     <div class="container">
       <span><%= link_to image_tag("nagano.png"), root_path, data: {"turbolinks" => false} %></span>
-    
-    
+
+
     <!--顧客がサインインした場合-->
     <% if customer_signed_in? %>
     <span>ようこそ！<%= current_customer.last_name + current_customer.first_name %>さん</span>
@@ -15,8 +15,7 @@
           <%= link_to "商品一覧", public_items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <!--カート内商品の実装ができたらパスを変更します！-->
-          <%= link_to "カート", public_items_path,class: "nav-link" %>
+          <%= link_to "カート", public_cart_items_path,class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
