--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -37,5 +37,5 @@
        <td><%= f.text_field :name, :placeholder => "令和道子" %></td>
      </tr>
   </table>
- <%= f.submit "確認画面へ進む" %>
+ <%= f.submit "確認画面へ進む", class: "btn btn-success" %>
 <% end %>
