--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,46 +3,42 @@
 <%# 課題事項：タイトルの背景色変更,
 　　買い物を続けるボタンのパス変更, パスの確認, %>
 <h6>ショッピングカート</h6>
-
 <%# ショッピングカートの右側の表示機能 %>
-<%= link_to 'カートを空にする', public_destroy_all_path, method: :delete, class: "btn btn-danger" %>
+<%= link_to 'カートを空にする', public_destroy_all_path, method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %>
 
+  <table border="5">
+  <thead>
+   <tr>
+    <th>商品名</th>
+    <th>単価（税込）</th>
+    <th>数量</th>
+    <th>小計</th>
+   </tr>
+  </thead>
 
- <main>
-  <table class="table">
-   <thead>
-   <td>商品名</td>
-   <td>単価（税込）</td>
-   <td>数量</td>
-   <td>小計</td>
-   </thead>
+  <tbody>
+   <% @cart_items.each do |cart_item| %>
+    <tr>
+     <td><%= cart_item.item.name %></td>
 
-<tbody>
- <% @cart_items.each do |cart_item| %>
- <tr>
- <td><%= cart_item.item.name %></td>
- <td><%= cart_item.item.with_tax_price %></td>
- <td><%= form_with model:[cart_item], url: public_cart_item_path(cart_item) do |f| %></td>
- <td>
-   <%= f.select :amount, [['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5], ['6', 6], ['7', 7], ['8', 8], ['9', 9]], {:prompt => "個数選択"} %>
-   <%= f.submit "変更", class: "btn btn-success" %>
-   </td>
+     <td><%= cart_item.item.with_tax_price%></td>
+     <%= form_with model:[cart_item], url: public_cart_item_path(cart_item) do |f| %>
+
+     <td><%= f.select :amount, [['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5], ['6', 6], ['7', 7], ['8', 8], ['9', 9]], {:prompt => "個数選択"} %>
+         <%= f.submit "変更", class: "btn btn-success" %>
+     </td>
    <% end %>
-   <td><%= cart_item.item.with_tax_price %></td>
-   <td><%= link_to '削除する', "/public/cart_items/#{cart_item.id}", method: :delete, class: "btn btn-danger" %></td>
-    <% end %>
- </tr>
-</tbody>
-
+     <td><%= cart_item.sum_of_price %></td>
+     <td><%= link_to '削除する', "/public/cart_items/#{cart_item.id}", method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %></td>
+   <% end %>
+    </tr>
+   </tbody>
   </table>
-
-
 <%# 単価（税込）合計金額の記載 %>
-<h4><%= "合計金額:#{@prices*1.1}円" %></h4>
+<h4><%= "合計金額:#{@prices}円" %></h4>
 
 <%# ショッピングカート真ん中部分の表示機能 %>
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
 <%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
 <%= link_to '情報入力に進む', root_path, class: "btn btn-success" %>
-
