--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "商品一覧", public_items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "カート", public_cart_items_path,class: "nav-link" %>
+          <%= link_to "カート", cart_items_path,class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
