--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -4,7 +4,7 @@
 　　買い物を続けるボタンのパス変更, パスの確認, %>
 <h6>ショッピングカート</h6>
 <%# ショッピングカートの右側の表示機能 %>
-<%= link_to 'カートを空にする', public_destroy_all_path, method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %>
+<%= link_to 'カートを空にする', destroy_all_path, method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %>
 
   <table border="5">
   <thead>
@@ -22,7 +22,7 @@
      <td><%= cart_item.item.name %></td>
 
      <td><%= cart_item.item.with_tax_price%></td>
-     <%= form_with model:[cart_item], url: public_cart_item_path(cart_item) do |f| %>
+     <%= form_with model:[cart_item], url: cart_item_path(cart_item) do |f| %>
 
      <td><%= f.select :amount, [['1', 1], ['2', 2], ['3', 3], ['4', 4], ['5', 5], ['6', 6], ['7', 7], ['8', 8], ['9', 9]], {:prompt => "個数選択"} %>
          <%= f.submit "変更", class: "btn btn-success" %>
@@ -41,4 +41,4 @@
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
 <%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
-<%= link_to '情報入力に進む', root_path, class: "btn btn-success" %>
+<%= link_to '情報入力に進む', confirm_public_orders_path, class: "btn btn-success" %>
