--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+<div class="container-fluid" style="padding-bottom: 100px;">
 <footer>
   <div class="fixed-bottom">
     <div class="text-center p-3" style="background-color:#FFFFCC;">
@@ -5,3 +6,4 @@
     </div>
   </div>
 </footer>
+</div>
