--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -4,19 +4,18 @@
       <!--ジャンル検索-->
       <%= render 'genrevar', genres: @genres %>
     </div>
-  <div class="col-xs-10">
+<div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
 
 
 <!--一覧部分-->
-  <p>
-    商品一覧(全<%= @items.count %>件)
-  </p> 
+  <h2 style="margin: 20px 0;">商品一覧(全<%= @items.count %>件)</h2>
+
   <% @items.each do |item| %>
   <div class="col-xs-3 text-center ">
     <p><%= image_tag item.image, size:"200x200" %></p>
     <p><%= link_to item.name, public_item_path(item)%></p>
     <p><%= item.price %>円</p>
-  </div>  
+  </div>
   <% end %>
 
 <%= paginate @item %>
