--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -4,7 +4,9 @@
 　　　<!--ジャンル検索-->
       <%= render 'genrevar', genres: @genres %>
     </div>
-    <div class="col-xs-10">
+    
+    
+    <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
       <div class="col-xs-4 ">
         <%= image_tag @item.image, size:"200x200" %></p><br>
       </div>
