--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -41,6 +41,6 @@
 
 
 <p>注文履歴</p>
-<p><%= link_to "一覧をみる", public_orders_path, class:"btn btn-sm btn-success" %></p>
+<p><%= link_to "一覧をみる", orders_path, class:"btn btn-sm btn-success" %></p>
 
 </div>
