--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -55,7 +55,7 @@
   </tr>
 </table>
 
-<%= form_with model: @order, url: public_orders_path, method: :post, local: true do |f| %>
+<%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
    <%= f.hidden_field :customer_id %>
    <%= f.hidden_field :shipping_cost %>
    <%= f.hidden_field :total_payment %>
