--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,30 @@
 <h2>注文履歴一覧</h2>
 
+<table>
+  <tr>
+     <th>注文日</th>
+     <th>配送先</th>
+     <th>注文商品</th>
+     <th>支払金額</th>
+     <th>ステータス</th>
+     <th>注文詳細</th>
+  </tr>
+     <% @orders.each do |order| %>
+      <tr>
+        <td><%= order.created_at %></td>
+        <td>〒<%= order.customer.postal_code %>
+              <%= order.customer.address %><br>
+              <%= order.customer.last_name %><%= order.customer.first_name %>
+        </td>
+        <td>
+          <%= order.items.each do |item| %>
+           <%= item.name %>
+           <% end %>
+        </td>
+        <td><%= order.total_payment %></td>
+        <td><%= order.status_i18n %></td>
+        <td><%= link_to '表示する', order_path(order), class: "btn btn-success" %></td>
+      </tr>
+  <% end %>
+
+</table>
