--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -20,7 +20,7 @@
             </tr>
             <tr>
               <td>商品名</td>
-              <td><%= f.text_field :name,:placeholder => "商品名" %></td>
+              <td><%= f.text_field :name,:placeholder => "商品名",size:"40" %></td>
             </tr>
             <tr>
               <td>商品説明</td>
@@ -32,7 +32,7 @@
             </tr>
             <tr>
               <td>税抜価格</td>
-              <td><%= f.text_field :price,:placeholder => "1000" %>円</td>
+              <td><%= f.text_field :price,:placeholder => "1000",size:"40" %>円</td>
             </tr>
             <tr>
               <td>販売ステータス</td>
