public/address　の手直し

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -17,7 +17,7 @@
 
   <div class="row-lg-10">
     <table class="table">
-      <thread>
+      <thead>
         <tr bgcolor="silver">
           <th>商品ID</th>
           <th>商品名</th>
@@ -25,7 +25,7 @@
           <th>ジャンル</th>
           <th>ステータス</th>
         </tr>
-      </thread>
+      </tread>
       <tbody>
         <% @items.each do |item| %>
           <tr>
