--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -9,7 +9,7 @@
 
 <div class="container">
   <div class="row-lg-10">
-    <h1>商品新規画像</h1>
+    <h2>商品新規登録</h2>
     <div class="col-10 offset-md-1">
       <%= form_with model: @item,url: admin_items_path do |f| %>
         <table class="table">
