--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -9,27 +9,33 @@
 
 <%= flash[:notice] %>
 
-<h1>配送先登録/一覧</h1>
-<%= form_with model: @address, url: address_path, method: :patch do |f| %>
-  <table class="table">
-    <tbody>
-      <tr>
-        <td>郵便番号(ハイフンなし)</td>
-        <td><%= f.text_field :postal_code %></td>
-      </tr>
-      <tr>
-        <td>住所</td>
-        <td><%= f.text_field :address %></td>
-      </tr>
-      <tr>
-        <td>宛名</td>
-        <td><%= f.text_area :name %></td>
-        <td>
-          <div class="actions">
-            <%= f.submit "変更内容を保存" %>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-<% end %>
+<div class="container">
+  <div class="row-lg-10">
+    <h2>配送先編集</h2>
+    <div class="col-10 offset-md-1">
+      <%= form_with model: @address, url: address_path, method: :patch do |f| %>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>郵便番号(ハイフンなし)</td>
+              <td><%= f.text_field :postal_code,size:"20" %></td>
+            </tr>
+            <tr>
+              <td>住所</td>
+              <td><%= f.text_field :address,size:"40" %></td>
+            </tr>
+            <tr>
+              <td>宛名</td>
+              <td><%= f.text_field :name,size:"20" %></td>
+              <td>
+                <div class="actions">
+                  <td><%= f.submit "変更内容を保存",class: "btn btn-success" %></td>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      <% end %>
+    </div>
+  </div>
+</div>
