--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,20 @@
 
+<!-- main-visual用のdiv -->
+<div class = "main-visual">
+ <div class = "main-visual-content">
+
+  <!-- pタグと文字を追加 -->
+  <p class= "main-visual-text">
+  <div>ようこそながのCAKEへ！</div>
+  <div>このサイトは、ケーキ販売のECサイトになります。</div>
+  </p>
+  <p class="main-visual-name">
+  <div>会員ではない方も商品の閲覧はできますが、</div>
+  <div>購入には会員登録が必要になります。</div>
+  </p>
+ </div>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-2">
@@ -8,10 +24,7 @@
    </div>
  </div>
 
-<div>ようこそながのCAKEへ！</div>
-<div>このサイトは、ケーキ販売のECサイトになります。</div>
-<div>会員ではない方も商品の閲覧はできますが、</div>
-<div>購入には会員登録が必要になります。</div>
+
 
 <!--一覧部分-->
 <table>
