--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -43,5 +43,5 @@
 <%# ショッピングカート真ん中部分の表示機能 %>
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
-<%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
+<%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更 %>
 <%#= link_to '情報入力に進む', new_order_path, class: "btn btn-success" %>
