レイアウト

--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,6 +1,7 @@
 <h4>注文履歴詳細</h4>
 
 <h5>注文情報</h5>
+<div class="container">
 <table class="table">
    <tr>
      <th>注文日</th>
@@ -22,6 +23,7 @@
      <td><%= @order.status_i18n %></td>
    </tr>
 </table>
+</div>
 
 <h5>注文内容</h5>
 <table>
