--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -23,7 +23,7 @@
         </td>
         <td><%= order.total_payment %></td>
         <td><%= order.status_i18n %></td>
-        <td><%= link_to '表示する', order_path(order), class: "btn btn-success" %></td>
+        <td><%= link_to '表示する', order_path(order), class: "btn btn-primary" %></td>
       </tr>
   <% end %>
 
