--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,41 +1,55 @@
-<h4>注文情報入力</h4>
+<div class="container">
+  <div class="row py-2">
+    <div class="col-10 offset-2">
+     <h4>注文情報入力</h4>
+    </div>
+  </div>
+<div class="row">
+   <div class="col">
+    <%= form_with model: @order, url: confirm_orders_path, method: :post, local: true do |f| %>
+    <h5 class="font-weight-bold">支払方法</h5>
+     <p>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(0),checked: "checked" %>
+        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+     <br>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
+     </p>
 
-<h4>支払い方法</h4>
-<%= form_with model: @order, url: confirm_orders_path, method: :post, local: true do |f| %>
-
-<%= f.radio_button :payment_method, Order.payment_methods.key(0),checked: "checked" %>
-<%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
-
-<%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-<%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
-
-<h4>お届け先</h4>
-
-<%= f.radio_button :address_id, 0, checked: "checked" %>
-  <%= f.label :order_address, "ご自身の住所" %><br>
-  〒<%= current_customer.postal_code %>
-    <%= current_customer.address %><br>
-    <%= current_customer.last_name %><%= current_customer.first_name %>
-
-<%= f.radio_button :address_id, 1 %>
-  <%= f.label :order_address, "登録済住所から選択" %><br>
-<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
-
- <%= f.radio_button :address_id, 2 %>
-  <%= f.label :order_address, "新しいお届け先" %>
-  <table>
-     <tr>
-       <td><%= f.label :postal_code, "郵便番号(ハイフンなし)" %></td>
-       <td><%= f.text_field :postal_code, :placeholder => "0000000" %></td>
-     </tr>
-     <tr>
-       <td><%= f.label :address, "住所" %></td>
-       <td><%= f.text_field :address, :placeholder => "東京都渋谷区代々木神園町0-0" %></td>
-     </tr>
-     <tr>
-       <td><%= f.label :name, "宛名" %></td>
-       <td><%= f.text_field :name, :placeholder => "令和道子" %></td>
-     </tr>
-  </table>
- <%= f.submit "確認画面へ進む", class: "btn btn-success" %>
-<% end %>
+    <h5 class="font-weight-bold">お届け先</h5>
+             <%= f.radio_button :address_id, 0, checked: "checked" %>
+             <%= f.label :order_address, "ご自身の住所" %>
+        <br>
+             〒<%= current_customer.postal_code %>
+             <%= current_customer.address %>
+        <br>
+             <%= current_customer.last_name %>
+             <%= current_customer.first_name %>
+        <br>
+             <%= f.radio_button :address_id, 1 %>
+             <%= f.label :order_address, "登録済住所から選択" %>
+        <br>
+             <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+        <br>
+             <%= f.radio_button :address_id, 2 %>
+             <%= f.label :order_address, "新しいお届け先" %>
+        <table>
+          <tr>
+             <td class="col-3"><%= f.label :postal_code, "郵便番号(ハイフンなし)" %></td>
+             <td class="col-9"><%= f.text_field :postal_code, :placeholder => "0000000" %></td>
+          </tr>
+          <tr>
+             <td class="col-3"><%= f.label :address, "住所" %></td>
+             <td class="col-9"><%= f.text_field :address, :placeholder => "東京都渋谷区代々木神園町0-0", size:"50" %></td>
+          </tr>
+          <tr>
+             <td class="col-3"><%= f.label :name, "宛名" %></td>
+             <td class="col-9"><%= f.text_field :name, :placeholder => "令和道子" %></td>
+          </tr>
+         </table>
+        <div class="row justify-content-center">
+         <%= f.submit "確認画面へ進む", class: "btn btn-primary" %>
+        </div>
+       <% end %>
+    </div>
+</div>
