--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -14,7 +14,7 @@
     <h2>配送先編集</h2>
     <div class="col-10 offset-md-1">
       <%= form_with model: @address, url: address_path, method: :patch do |f| %>
-        <table class="table">
+        <table class="table table-borderless">
           <tbody>
             <tr>
               <td>郵便番号(ハイフンなし)</td>
