--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -13,7 +13,7 @@
     <div class="col-10 offset-md-1">
 <%= form_with model: @item, url: admin_item_path, method: :patch do |f| %>
 
-  <table class="table">
+  <table class="table table-borderless">
     <tbody>
       <tr>
         <td>商品画像</td>
@@ -37,7 +37,10 @@
       </tr>
       <tr>
         <td>販売ステータス</td>
-        <td><%= f.radio_button :is_active, true %>販売中　<%= f.radio_button :is_active, :false %>販売停止中</td>
+        <td>
+          <%= f.radio_button :is_active, true %><%= f.label :is_active, '販売中', value: true %>
+          <%= f.radio_button :is_active, false %><%= f.label :is_active, '販売停止中', value: false %>
+        </td>
       </tr>
     </tbody>
   </table>
