--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -6,10 +6,10 @@
   </div>
   <div class="row">
     <div class="col-3">
-      <span><%= image_tag @item.image, size:"200x200" %></span>
+      <span><%= image_tag @item.image, class:"img-thumbnail" %></span>
     </div>
     <div class="col-6 offset-md-1">
-      <table class="table">
+      <table class="table table-borderless">
         <tbody>
           <tr>
             <td>商品名</td>
