--- a/app/views/admin/order_details/_order_detail.html.erb
+++ b/app/views/admin/order_details/_order_detail.html.erb
@@ -1,1 +1,27 @@
-<h1>order_detailsの部分です</h1>
+<table class="table">
+  <thread>
+    <tr class="table-secondary font-weight-bold">
+      <td>商品名</td>
+      <td>単価（税込）</td>
+      <td>数量</td>
+      <td>小計</td>
+      <td>制作ステータス</td>
+    </tr>
+  </thread>
+  <tbody>
+    <% order.order_details.each do |order_detail| %>
+      <tr>
+        <td><%= order_detail.item.name %></td>
+        <td><%= (order_detail.item.price*1.1).floor.to_s(:delimited) %>円</td>
+        <td><%= order_detail.amount %></td>
+        <td><%= ((order_detail.item.price*1.1).floor*order_detail.amount).to_s(:delimited) %>円</td>
+        <td>
+          <%= form_with model: order_detail, url: admin_order_order_detail_path(params[:id],order_detail.id), method: :patch do |f| %>
+            <%= f.select :making_status, OrderDetail.making_statuses_i18n.invert,{},{}  %>
+            <%= f.submit "更新",class:"btn btn-success" %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
