--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -15,7 +15,7 @@
   <h2>配送先登録/一覧</h2>
     <div class="col-11 offset-md-1">
       <%= form_with model: @address, url: addresses_path, method: :post do |f| %>
-        <table class="table">
+        <table class="table table-borderless">
           <tbody>
             <tr>
               <td>郵便番号(ハイフンなし)</td>
