--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -48,7 +48,7 @@
   <tr>
    <th>住所</th>
    <th>
-   <%= f.text_field :address %>
+   <%= f.text_field :address, :size => "70*70" %>
    </th>
   </tr>
 
