--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,16 +1,21 @@
-<h4>注文履歴一覧</h4>
+<div class="container">
+  <div class="row py-2">
+    <div class="col-10 offset-2">
+      <h4>注文履歴一覧</h4>
+    </div>
+  </div>
 
-<table class= 'table-hover'>
-  <tr>
-     <th>注文日</th>
-     <th>配送先</th>
-     <th>注文商品</th>
-     <th>支払金額</th>
-     <th>ステータス</th>
-     <th>注文詳細</th>
-  </tr>
+  <table class="table table-bordered border-dark">
+    <tr class="table-secondary">
+      <th>注文日</th>
+      <th>配送先</th>
+      <th>注文商品</th>
+      <th>支払金額</th>
+      <th>ステータス</th>
+      <th>注文詳細</th>
+    </tr>
      <% @orders.each do |order| %>
-      <tr>
+     <tr>
         <td><%= l order.created_at %></td>
         <td>〒<%= order.postal_code %>
               <%= order.address %><br>
@@ -26,5 +31,5 @@
         <td><%= link_to '表示する', order_path(order), class: "btn btn-primary" %></td>
       </tr>
   <% end %>
-
 </table>
+</div>
