public/itemsの見た目を整えたのと、URLが「public/~」から始まっていたので、ルーティングから修正しました

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -32,7 +32,7 @@
   <div class="container">
   <div class="row">
   <tr><% @items.each do |item| %></tr>
-    <%= link_to public_item_path(item) do %>
+    <%= link_to item_path(item) do %>
     <%= image_tag item.image, size:"100x100" %>
     <div><%= item.name %></div>
     <% end %>
@@ -42,4 +42,4 @@
     </div>
 
 
-<%= link_to "全ての商品を見る", public_items_path %>
+<%= link_to "全ての商品を見る", items_path %>
