--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,3 +1,5 @@
+<%= flash[:notice] %>
+
 <div class="container">
   <div class="row">
     <div class="col-11">
@@ -13,7 +15,7 @@
             <!--<th>注文ステータス</th>-->
           </tr>
         </thead>
-        
+
 
         <tbody>
           <% @orders.each do |order| %>
@@ -30,9 +32,9 @@
               <td><%#= order.status %></td>
             </tr>
             <% end %>
-            
-            
-            
+
+
+
              <td><%= paginate @orders %></td>
         </tbody>
       </table>
