--- a/app/views/public/items/_genrevar.html.erb
+++ b/app/views/public/items/_genrevar.html.erb
@@ -8,7 +8,7 @@
   <tbody>
     <% genres.each do |genre| %>
       <tr>
-        <td><%= link_to genre.name, public_items_path(genre_id: genre.id), class: "text-secondary" %></td>
+        <td><%= link_to genre.name, items_path(genre_id: genre.id), class: "text-secondary" %></td>
       </tr>
     <% end %>
   </tbody>
