--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,29 +1,29 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-2">
+  <div class="row mt-5">
+    <div class="col-2">
 　　　<!--ジャンル検索-->
       <%= render 'genrevar', genres: @genres %>
     </div>
 
-    <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
-      <div class="col-xs-4 ">
-        <%= image_tag @item.image, size:"200x200" %></p><br>
+    <!--<div class="col-10">-->
+      <div class="col-4 ">
+        <%= image_tag @item.image, class:"img-thumbnail" %></p><br>
       </div>
-      <div class="col-xs-8 ">
+      <div class="col-6 ">
         <div>
-          <%= @item.name %>
+          <h2><%= @item.name %></h2>
           <%= @item.introduction %>
-          ¥ <%= ((@item.price*1.1).floor).to_s(:delimited, delimiter: ',') %> (税込)
+          <br><br>
+          <span class="h4">¥ <%= ((@item.price*1.1).floor).to_s(:delimited, delimiter: ',') %></span> (税込)
 
           <!--個数選択-->
           <%= form_with model: @cart_item, url: cart_items_path do |f| %>
-          <%= f.hidden_field :item_id, :value => @item.id %>
-          <%#= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"} %>
-          <%= f.select :amount,(1..20).to_a, {:prompt => "個数選択"}, :required => true %>
-          <%= f.submit "カートに入れる" %>
+            <%= f.hidden_field :item_id, :value => @item.id %>
+            <%= f.select :amount,(1..20).to_a, {:prompt => "個数選択"}, :required => true %>
+            <%= f.submit "カートに入れる",class:"btn btn-success" %>
           <% end %>
         </div>
       </div>
-    </div>
+    <!--</div>-->
   </div>
 </div>
